--- a/app.css
+++ b/app.css
@@ -48,9 +48,9 @@ html{
 
 
 
-#Navigation{
+nav{
     width: 100%;
-    height: 70px;
+    height: 80px;
     background-image: linear-gradient(#4279db, #82afff);
     display: flex;
 }
@@ -58,28 +58,48 @@ img{
     margin-left: 15px;
     padding-right: 35px;
 }
-.item{
-    font-family: futura;
-    font-size: 16px;
-    letter-spacing: 1px;
-    color: #FFFFFF;
-    text-decoration: none;
-}
-ul{
-    float: left;
-    display: flex;
-    
-}
 
-ul li{
+nav ul li{
     float: left;
     list-style: none;
-    padding: 20px;
-    display: block;
     position: relative;
 }
-.dropDown{
+.item{
+    display: block;
+    font-family: futura;
+    font-size: 16px;
+    letter-spacing: 2px;
+    color: #FFFFFF;
     text-decoration: none;
+    padding: 15px 25px;
+    line-height: 50px;
+}
+nav ul li ul{
     display: block;
     position: absolute;
+    background-color: white;
+    width: 50px;
+    padding: 10px;
+    
+}
+#Industies{
+    padding-top: 50px;
+   
+    text-align: left;
+}
+.dropDown{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-left: 15%;
+    font-size: large;
+}
+
+h2 a{
+    text-decoration: none;
+    color: #4279db ;
+}
+hr{
+    width: 80%;
+    color: #38E5C4;
+    border: .5px solid;
 }
