--- a/app.css
+++ b/app.css
@@ -83,10 +83,15 @@ nav ul li ul{
     
 }
 #Industies{
+    display: none;
     padding-top: 50px;
-   
     text-align: left;
 }
+a#indus:hover + div #Industies{
+    display: block;
+    padding-top: 50px;
+    text-align: left;
+    }
 .dropDown{
     padding-top: 5px;
     padding-bottom: 5px;
@@ -120,4 +125,28 @@ li a i{
     background-color: transparent;
     padding: 2px 25px;
     margin: 15px 10px;
+}
+#searchbar{
+    margin: 10% 25%;
+}
+input{
+    width: 50%;
+    border-top: transparent;
+    border-left: transparent;
+    border-right: transparent;
+    font-family: futura;
+    font-size: large;
+    color: #4279db;
+}
+form button{
+    color:#38E5C4;
+    font-size: larger;
+    background-color: transparent;
+    border: transparent;
+}
+form{
+    display: none;
+}
+@media(min-width:1300px){
+
 }
