--- a/app.css
+++ b/app.css
@@ -1,3 +1,5 @@
+
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -15,7 +17,7 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font: inherit;
+	font: futura;
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -45,91 +47,87 @@ html{
     box-sizing:border-box;
    
 }
-
-
-
 nav{
+    display: flex;
     width: 100%;
     height: 80px;
     background-image: linear-gradient(#4279db, #82afff);
-    display: flex;
 }
 img{
-    margin-left: 15px;
-    padding-right: 35px;
+    padding: 0px 20px;
 }
 
 nav ul li{
     float: left;
     list-style: none;
     position: relative;
+    
 }
-.item{
+nav ul li:hover{
+    border-top:2px solid white ;
+}
+.mainNav{
+    color: #FFFFFF;
+}
+
+
+nav ul li a{
+   text-decoration: none;
+   letter-spacing: 2px;
     display: block;
     font-family: futura;
     font-size: 16px;
-    letter-spacing: 2px;
-    color: #FFFFFF;
-    text-decoration: none;
-    padding: 15px 25px;
-    line-height: 50px;
+    padding: 24px 34px;
 }
 nav ul li ul{
-    display: block;
-    position: absolute;
-    background-color: white;
-    width: 50px;
-    padding: 10px;
-    
-}
-#Industies{
-    display: none;
-    padding-top: 50px;
-    text-align: left;
-}
-a#indus:hover + div #Industies{
-    display: block;
-    padding-top: 50px;
-    text-align: left;
-    }
-.dropDown{
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin-left: 15%;
-    font-size: large;
-}
-
-h2 a{
     text-decoration: none;
-    color: #4279db ;
-}
-hr{
-    width: 80%;
+    color: blue;
+     display: none;
+     position: absolute;
+     font-family: futura;
+     font-size: 16px;
+     padding: 24px 24px;
+    
+ }
+ nav ul li:hover ul{
+     display: block;
+ }
+ nav ul li ul li a{
+  width: 180px;
+ }
+ nav ul li ul li:nth-child(2){
+    border-bottom: 1px solid #38E5C4;
+    border-top: 1px solid #38E5C4;
+ }
+
+ nav ul li ul li a:hover{
     color: #38E5C4;
-    border: 1px thin;
-}
-h2 a:hover{
-    color: #38E5C4;
-}
-li a i{
-    color: #FFFFFF;
-    padding: 33px 35px;
-    line-height: 50px;
-}
-#demo{
+    visibility: visible;
+    
+  }
+ nav ul li ul a:hover span{
+     visibility: visible;
+ }
+ #search{
+     margin-top: 2%;
+     margin-top: 25px;
+     padding: 0px 10px;
+ }
+ #demo{
     text-align: center;
     font-family: futura;
     font-size: 15px;
     color: #FFFFFF;
     border: 1px solid #FFFFFF;
     background-color: transparent;
-    padding: 2px 25px;
-    margin: 15px 10px;
-}
-#searchbar{
-    margin: 10% 25%;
-}
-input{
+    padding: 2px 45px;
+    margin: 15px 40px;
+ }
+ #searchbar{
+    margin: 5% 25%;
+    display: none;
+ }
+ input{
     width: 50%;
     border-top: transparent;
     border-left: transparent;
@@ -144,9 +142,6 @@ form button{
     background-color: transparent;
     border: transparent;
 }
-form{
-    display: none;
-}
-@media(min-width:1300px){
+@media(max-width:1300px){
 
 }
