--- a/app.css
+++ b/app.css
@@ -142,6 +142,23 @@ form button{
     background-color: transparent;
     border: transparent;
 }
+#three{
+    visibility: hidden;
+}
 @media(max-width:1300px){
+    #three{
+        visibility: visible;
+        color: #FFFFFF;
+        line-height: 65px;
+        padding-left: 10px;
+        padding-right: 10px; 
+        float: left;       
+    }
+    button{
+        visibility: hidden;
+    }
+    ul li{
+        visibility: hidden;
+    }
 
 }
